# vps-monitor

./: .dockerignore  .gitignore  Cargo.toml  README.md  design-qa.md  docker-compose.yml
.github/workflows/: docker-images.yml  release-agent.yml  security-audit.yml
agent/: Cargo.toml  install.sh
agent/src/: main.rs
deploy/: agent.Dockerfile  docker-compose.agent.yml  env.example  nginx.example.conf  server.Dockerfile
docs/: architecture.md  vps-deploy.md
server/: Cargo.toml
server/migrations/: 0001_init.sql  0002_geoip.sql  0003_geoip_download_url.sql  0004_public_display_defaults.sql  0005_public_brand_name.sql  0006_center_auto_location.sql  0007_node_groups_refresh_interval.sql
server/src/: main.rs
web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/src/: AdminPanel.tsx  App.tsx  Dashboard.tsx  GlobeMap.tsx  SelectDrawer.tsx  api.ts  demo.ts  format.ts  i18n.tsx  styles.css  types.ts
